crates/legalis-dsl/src/tests/snapshots/legalis_dsl__tests__snapshot__snapshot_tests__snapshot_complex_conditions.snap
---
source: crates/legalis-dsl/src/tests/snapshot.rs
assertion_line: 102
expression: doc
---
{
  "namespace": null,
  "imports": [],
  "exports": [],
  "statutes": [
    {
      "id": "complex",
      "title": "Complex Conditions",
      "visibility": "Private",
      "conditions": [
        {
          "Or": [
            {
              "And": [
                {
                  "Comparison": {
                    "field": "age",
                    "operator": ">=",
                    "value": {
                      "Number": 18
                    }
                  }
                },
                {
                  "Comparison": {
                    "field": "age",
                    "operator": "<=",
                    "value": {
                      "Number": 65
                    }
                  }
                }
              ]
            },
            {
              "HasAttribute": {
                "key": "disability"
              }
            }
          ]
        },
        {
          "In": {
            "field": "income",
            "values": [
              {
                "Number": 20000
              },
              {
                "Number": 30000
              },
              {
                "Number": 40000
              }
            ]
          }
        },
        {
          "Like": {
            "field": "name",
            "pattern": "Smith%"
          }
        },
        {
          "Not": {
            "Comparison": {
              "field": "status",
              "operator": "==",
              "value": {
                "String": "invalid"
              }
            }
          }
        }
      ],
      "effects": [
        {
          "effect_type": "grant",
          "description": "eligibility",
          "parameters": []
        }
      ],
      "discretion": null,
      "exceptions": [],
      "amendments": [],
      "supersedes": [],
      "defaults": [],
      "requires": [],
      "delegates": [],
      "scope": null,
      "constraints": [],
      "priority": null
    }
  ]
}
