crates/legalis-dsl/src/tests/snapshots/legalis_dsl__tests__snapshot__snapshot_tests__snapshot_complex_statute.snap
---
source: crates/legalis-dsl/src/tests/snapshot.rs
assertion_line: 45
expression: doc
---
namespace: ~
imports: []
exports: []
statutes:
  - id: tax-credit
    title: Tax Credit Eligibility
    visibility: Private
    conditions:
      - Between:
          field: income
          min:
            Number: 20000
          max:
            Number: 100000
      - And:
          - Comparison:
              field: age
              operator: ">="
              value:
                Number: 25
          - Comparison:
              field: age
              operator: "<="
              value:
                Number: 65
      - HasAttribute:
          key: dependents
    effects:
      - effect_type: grant
        description: tax credit
        parameters: []
      - effect_type: obligation
        description: file tax return
        parameters: []
    discretion: ~
    exceptions:
      - conditions:
          - Comparison:
              field: income
              operator: ">"
              value:
                Number: 90000
        description: High income exception
    amendments: []
    supersedes:
      - old-tax-credit
    defaults:
      - field: category
        value:
          String: standard
    requires:
      - base-income
      - residency
    delegates: []
    scope: ~
    constraints: []
    priority: ~
