crates/legalis-dsl/src/tests/snapshots/legalis_dsl__tests__snapshot__snapshot_tests__snapshot_simple_statute.snap
---
source: crates/legalis-dsl/src/tests/snapshot.rs
assertion_line: 21
expression: doc
---
{
  "namespace": null,
  "imports": [],
  "exports": [],
  "statutes": [
    {
      "id": "voting-rights",
      "title": "Voting Rights Act",
      "visibility": "Private",
      "conditions": [
        {
          "And": [
            {
              "Comparison": {
                "field": "age",
                "operator": ">=",
                "value": {
                  "Number": 18
                }
              }
            },
            {
              "HasAttribute": {
                "key": "citizenship"
              }
            }
          ]
        }
      ],
      "effects": [
        {
          "effect_type": "grant",
          "description": "right to vote",
          "parameters": []
        }
      ],
      "discretion": null,
      "exceptions": [],
      "amendments": [],
      "supersedes": [],
      "defaults": [],
      "requires": [],
      "delegates": [],
      "scope": null,
      "constraints": [],
      "priority": null
    }
  ]
}
