crates/legalis-dsl/src/tests/snapshots/legalis_dsl__tests__snapshot__snapshot_tests__snapshot_with_imports.snap
---
source: crates/legalis-dsl/src/tests/snapshot.rs
assertion_line: 84
expression: doc
---
namespace: ~
imports:
  - path: common/definitions.legalis
    alias: ~
    kind: Simple
  - path: lib/utils.legalis
    alias: utils
    kind: Simple
exports: []
statutes:
  - id: test
    title: Test Statute
    visibility: Private
    conditions:
      - Comparison:
          field: age
          operator: ">="
          value:
            Number: 21
    effects:
      - effect_type: grant
        description: adult rights
        parameters: []
    discretion: ~
    exceptions: []
    amendments: []
    supersedes: []
    defaults: []
    requires: []
    delegates: []
    scope: ~
    constraints: []
    priority: ~
